--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     display: grid;
     align-items: center;
     justify-content: center;
+    background: radial-gradient(grey,white);
 }
 .calculator{
     height: 600px;
